k8s/1_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-site
  namespace: rss
  labels:
    app: rss-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-site
  template:
    metadata:
      labels:
        app: rss-site
    spec:
      containers:
      - name: rss-site
        image: localhost:5000/rss-site:latest
        imagePullPolicy: Always
        command: ["npm"]
        args:
          - start
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: rss
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: bitnami/redis:6.0.13
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quirrel
  namespace: rss
  labels:
    app: quirrel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quirrel
  template:
    metadata:
      labels:
        app: quirrel
    spec:
      containers:
      - name: quirrel
        image: ghcr.io/quirrel-dev/quirrel:sha-1b0f329
