k8s/2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: rss-service
  namespace: rss
spec:
  type: NodePort
  selector:
    app: rss-site
  ports:
    - name: http
      port: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: rss
spec:
  type: NodePort
  selector:
    app: redis
  ports:
    - name: tcp
      port: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: quirrel
  namespace: rss
spec:
  type: NodePort
  selector:
    app: quirrel
  ports:
    - name: tcp
      port: 9181
