k8s/3_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss-ingress
  namespace: rss
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rss.mchone.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rss-service
            port:
              number: 3000
