k8s/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rss
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rss-site
  namespace: rss
  labels:
    app: rss-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rss-site
  template:
    metadata:
      labels:
        app: rss-site
    spec:
      containers:
      - name: rss-site
        image: localhost:5000/rss-site:latest
        command: ["npm"]
        args:
          - start
---
apiVersion: v1
kind: Service
metadata:
  name: rss-service
  namespace: rss
spec:
  type: NodePort
  selector:
    app: rss-site
  ports:
    - name: http
      port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rss-ingress
  namespace: rss
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: rss.mchone.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rss-site
            port:
              number: 3000
